force-app/main/default/objects/Postessupplementaire__c/Postessupplementaire__c.object-meta.xml
<CustomObject>
    <label>Poste supplémentaire</label>
    <nameField>
        <label>Nom de Postes actuelles</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postes supplémentaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>