force-app/main/default/objects/Postessupplementaire__c/fields/Debut__c.field-meta.xml
<CustomField>
    <fullName>Debut__c</fullName>
    <label>Début</label>
    <type>Date</type>
</CustomField>