force-app/main/default/objects/Postessupplementaire__c/fields/Societe__c.field-meta.xml
<CustomField>
    <fullName>Societe__c</fullName>
    <label>Société</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Postesactuelles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>